align items in main section fix

--- a/lesson_13_additional/styles/_module.scss
+++ b/lesson_13_additional/styles/_module.scss
@@ -41,18 +41,21 @@
 .main-photo-section-1 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
 .main-photo-section-2 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
 .main-photo-section-3 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
