--- a/lesson_13_additional/styles/index.css
+++ b/lesson_13_additional/styles/index.css
@@ -132,18 +132,21 @@ li {
 .main-photo-section-1 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
 .main-photo-section-2 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
 .main-photo-section-3 {
   display: grid;
   justify-items: stretch;
+  align-items: stretch;
   gap: 15px;
 }
 
